# bank/src/main/java/com/bank/controller/AccountController.java
@@ -24,60 +24,32 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.io.IOException;
-
-
+import java.util.Optional;
 
 
 @RestController
 @RequestMapping("/api")
-public class AccountController implements AccountsApi {
+public class AccountController   implements AccountsApi{
     @Autowired
     AccountServiceImpl accountService;
     @Autowired
     AccountRepository accountRepository;
     @Autowired
     CustomerRepository customerRepository;
-    @GetMapping("/{accountNumber}/balance")
-    public ResponseEntity<AccountM>  testMethod(@PathVariable String accountNumber){
-
-        Account account = accountRepository.findByAccountNumber(accountNumber);
-        if(account == null){
-            ResponseEntity.notFound();
-        }
-        AccountM accountM = new AccountM();
-        accountM.setAccountBalance(account.getAccountBalance());
-        //accountM.setAccountType(AccountM.AccountTypeEnum.valueOf(account.getAccountType().toString()));
-
-        accountM.setStatus(account.getStatus().toString());
-        CustomerM customerM = new CustomerM();
-        accountM.setCustomer(customerM);
-        accountM.setDateCreated(account.getDateCreated());
-        accountM.setLastActivity(account.getLastActivity());
-        accountM.setCustomerName(account.getCustomer().getFirstName() + "," + account.getCustomer().getLastName());
-
-
-        return ResponseEntity.ok(accountM);
-    }
-
-    @RequestMapping("/docs/index.html")
-    public void apiDocumentation(HttpServletResponse response) throws IOException {
-        response.sendRedirect("/swagger-ui.html");
-    }
 
     @Override
     public ResponseEntity<String> accountId(NewAccount body) {
-
         return ResponseEntity.ok(accountService.createAccount(body).getBody());
     }
 
     @Override
-    public ResponseEntity<AccountM> accountsAccountIdBalanceGet(String accountId) {
-
-        return null;
+    public ResponseEntity<AccountM> accountsAccountNumberBalanceGet(String accountNumber) {
+        return  ResponseEntity.ok(accountService.getAccount(accountNumber));
     }
 
     @Override
     public ResponseEntity<Void> depositToAccount(DepositRequest body) {
         return null;
     }
+
 }
