# bank/src/main/java/com/bank/controller/CustomerController.java
@@ -3,8 +3,11 @@ package com.bank.controller;
 
 import com.bank.api.CustomerApi;
 import com.bank.entity.Customer;
+import com.bank.model.CustomerM;
 import com.bank.repository.CustomerRepository;
+import com.bank.service.CustomerServiceImpl;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
@@ -13,14 +16,16 @@ import java.math.BigDecimal;
 
 @RestController
 @RequestMapping("/api")
-public class CustomerController  implements CustomerApi {
+public class CustomerController implements CustomerApi {
     @Autowired
-    CustomerRepository customerRepository;
+    CustomerServiceImpl customerService;
 
 
     @Override
-    public ResponseEntity<Customer> customerId(BigDecimal customerId) {
+    public ResponseEntity<CustomerM> customerId(String accountNumber) {
+        customerService.getCustomerById(accountNumber);
 
-        return ResponseEntity.ok(customerRepository.findByCustomerId(customerId.longValue()));
+
+        return ResponseEntity.ok(customerService.getCustomerById(accountNumber));
     }
 }
