# bank/src/main/java/com/bank/entity/Transaction.java
@@ -1,0 +1,27 @@
+package com.bank.entity;
+
+import jakarta.persistence.*;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+import java.math.BigDecimal;
+import java.time.LocalDateTime;
+
+@Entity
+@AllArgsConstructor
+@NoArgsConstructor
+@Builder
+@Data
+public class Transaction {
+    @Id
+    @GeneratedValue(strategy= GenerationType.IDENTITY)
+    private  Long id;
+    @Column(nullable = false)
+    private BigDecimal amount;
+    private LocalDateTime timestamp = LocalDateTime.now();
+    @ManyToOne
+    @JoinColumn(name = "account_id")
+    private Account account;
+}
